nienawidze cie karolona

--- a/index5.html
+++ b/index5.html
@@ -88,20 +88,20 @@
 <body>
   <div class="plate">
     <div class="corner">
-      <div class="corner_top_top_left corner_border_green"></div>
-      <div class="corner_top_bottom_left corner_border_green"></div>
+      <div class="corner_top_top_left"></div>
+      <div class="corner_top_bottom_left"></div>
     </div>
     <div class="corner corner_top_right">
-      <div class="corner_top_top_right corner_border_green"></div>
-      <div class="corner_top_bottom_right corner_border_green"></div>
+      <div class="corner_top_top_right"></div>
+      <div class="corner_top_bottom_right"></div>
     </div>
     <div class="corner corner_bottom_left">
-      <div class="corner_bottom_top_left corner_border_green"></div>
-      <div class="corner_bottom_bottom_left corner_border_green"></div>
+      <div class="corner_bottom_top_left"></div>
+      <div class="corner_bottom_bottom_left"></div>
     </div>
     <div class="corner corner_bottom_right">
-      <div class="corner_bottom_top_right corner_border_green"></div>
-      <div class="corner_bottom_bottom_right corner_border_green"></div>
+      <div class="corner_bottom_top_right"></div>
+      <div class="corner_bottom_bottom_right"></div>
     </div>
   </div>
 </body>
